--- a/part4/package.json
+++ b/part4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --testTimeout=10000",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --setTimeout=20000",
     "testDev": "cross-env NODE_ENV=test nodemon index.js"
   },
   "author": "",
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.8",
     "mongoose-unique-validator": "^2.0.3"
