--- a/part6/unicafe-redux/package.json
+++ b/part6/unicafe-redux/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "bloglist-frontend",
+  "name": "unicafe-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.2.2",
-    "react-scripts": "3.3.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "^3.4.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "eslint": "eslint .",
-    "cypress:open": "cypress open"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,13 +32,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "cypress": "^5.4.0",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-jest": "^24.1.0",
-    "redux-devtools-extension": "^2.13.8"
+    "deep-freeze": "0.0.1"
   }
 }
