--- a/part9/package.json
+++ b/part9/package.json
@@ -5,13 +5,21 @@
   "main": "index.js",
   "scripts": {
     "calculateBmi": "ts-node calculateBmi.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts"
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "dev": "ts-node-dev index.ts",
+    "start": "index index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.19",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "query-string": "^6.13.8"
   }
 }
