--- a/part9/package.json
+++ b/part9/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "calculateBmi": "ts-node calculateBmi.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
+    "lint": "eslint --ext .ts .",
     "dev": "ts-node-dev index.ts",
     "start": "index index.js"
   },
@@ -14,11 +15,15 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.19",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "query-string": "^6.13.8"
   }
